
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-11-29 DP  1.6.1  Prevent a crash from the query too when using File -> 
                      Exit on GTK
2006-11-29 DP  1.6.1  Don't paste into empty edit grids, per Howard Wang
2006-11-29 DP  1.6.1  Guard against permission denied errors in the edit grid
                      per Howard Wang
2006-11-29 DP  1.6.1  Fix some portability issues in the configure code [Max
                      Khon]
2006-11-28 DP  1.6.1  Properly quote function parameter names, per Ken Priest.
2006-11-28 DP  1.6.1  Don't display index constraints under the Indexes node
                      as well as the Contraints node, per Erwin.
2006-11-27 DP  1.6.1  Fix a minor bug in the index reverse engineering when
                      using non-default operator classes per Andrus.
2006-11-23 DP  1.6.1  Only enable the 'Include SQL' checkbox on the report
                      dialog if there is SQL to include, Per Ezequias 
                      Rodrigues da Rocha
2006-11-21 DP  1.6.1  When checking the position & size of windows, use the
                      dimensions of the current display, not the primary.
2006-11-17 DP  1.6.1  Include IN/OUT/INOUT keywords in procedure identifiers
                      in the treeview.
2006-11-17 DP  1.6.1  Fix deletion of stored procedures, Per Erwin.
2006-11-16 DP  1.6.1  Rework the Find/Replace code to fix a couple of minor 
                      bugs and improve readability.
2006-11-16 DP  1.6.1  Enable the OK button on the Database properties dialog
                      when the owner is changed, per Jim Cullison
2006-11-15 DP  1.6.1  Prevent a crash if the 'View Filtered Data' filter dialog