@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-01 DP  1.6.2  Prevent the filter/sort options dialogue being opened
+                      when data is being refreshed, per Erwin.
 2006-11-29 DP  1.6.1  Prevent a crash from the query too when using File -> 
                       Exit on GTK
 2006-11-29 DP  1.6.1  Don't paste into empty edit grids, per Howard Wang
